<resources>
    <string name="app_name">Github Basic Client</string>

    <!-- - - - - - - - - - - - - - - - - label, title - - - - - - - - - - - - - - - - - - - - - -->
    <string name="toolbar_title">Github Basic Client</string>
    <string name="loading_title">Loading</string>
    <string name="title_user_detail">User Detail</string>
    <string name="search_title">Search for users</string>
    <string name="loadMore_btn_title">Load More</string>
    <string name="profile_tab_title">PROFILE</string>
    <string name="repositories_tab_title">REPOSITORIES</string>
    <string name="alert_filter_title">Choose Filter parameter</string>
    <string name="ok">OK</string>
    <string name="profile_name_title">NAME :</string>
    <string name="profile_location_title">LOCATION :</string>
    <string name="profile_email_title">EMAIL :</string>
    <string name="profile_profile_url_title">PROFILE URL :</string>
    <string name="profile">Profile</string>
    <string name="repositories">Repositories</string>

    <!-- - - - - - - - - - - - - - - - - Filter Type - - - - - - - - - - - - - - - - - - - - - - -->
    <string name="filter_type_start_label">filter type : </string>


    <string name="filter_type_name_asc">filter type : name asc</string>
...
